--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.thymeleaf.cache=false
 spring.datasource.url=jdbc:mysql://localhost:8889/db_photography
 spring.datasource.username=root
 spring.datasource.password=root
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=create-drop
+#See sql queries(NOT RACCOMANDED IN PRODUCTION!!!!)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
